--- a/02_vanilla_ptq.ipynb
+++ b/02_vanilla_ptq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "8262d131",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "d2d53280",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "34d0778f",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "041ee0ac",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
     "for name, m in model.named_modules():\n",
     "    if isinstance(m, (nn.Conv2d, nn.Linear, nn.ReLU, nn.BatchNorm2d)):\n",
     "        m.register_forward_hook(get_hook(name))\n",
-    "        #print(f'{name}')\n",
+    "        #print(f'name: {name}, m: {m}')\n",
     "\n",
     "# Calibration (2048 images)\n",
     "model.eval()\n",
@@ -119,15 +119,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72baa90e",
+   "id": "0b67d856",
    "metadata": {},
    "source": [
-    "### Weight quantization (per-tensor symmetric)"
+    "### Activation quantization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
+   "id": "6bf25ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activation_scales = {}\n",
+    "# after calibration, get scale and zero-point\n",
+    "for name, obs in observers.items():\n",
+    "    # Activation usually use asymmetric uint8 (0~255) quantization\n",
+    "    scale, zp = obs.get_scale_zp(symmetric=False)\n",
+    "    #print(f\" scale: {scale}, zp: {zp} for {name}\")\n",
+    "    activation_scales[name] = (scale, zp.item() if torch.is_tensor(zp) else zp)\n",
+    "\n",
+    "def fake_quant_act(x, scale, zp):\n",
+    "    # Asymmetric uint8 quantization\n",
+    "    q_x = torch.clamp(torch.round(x/scale+zp), 0, 255)\n",
+    "    return (q_x -zp) *scale\n",
+    "\n",
+    "# remove hooks\n",
+    "for name, m in model.named_modules():\n",
+    "    if isinstance(m, (nn.Conv2d, nn.Linear, nn.ReLU, nn.BatchNorm2d)):\n",
+    "        m._forward_hooks.clear()\n",
+    "\n",
+    "# register quantization hooks for activations\n",
+    "def get_quant_hook(name):\n",
+    "    def hook(module, input, output):\n",
+    "        if name in activation_scales:\n",
+    "            scale, zp = activation_scales[name]\n",
+    "            return fake_quant_act(output, scale, zp)\n",
+    "        return output\n",
+    "    return hook\n",
+    "\n",
+    "for name, m in model.named_modules():\n",
+    "    if isinstance(m, (nn.Conv2d, nn.Linear, nn.ReLU, nn.BatchNorm2d)):\n",
+    "        m.register_forward_hook(get_quant_hook(name))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72baa90e",
+   "metadata": {},
+   "source": [
+    "### Weight quantization (symmetric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "bfdce24e",
    "metadata": {},
    "outputs": [],
@@ -153,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "402d92c3",
    "metadata": {},
    "outputs": [
@@ -161,10 +208,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vanilla PTQ Accuracy: 99.25%\n",
+      "Vanilla PTQ Accuracy: 99.26%\n",
       "Float Model Size: 44.76 MB\n",
       "Quantized Model Size (INT8) 11.23 MB\n",
-      "Inference Time: 3.013 ms/image\n"
+      "Inference Time: 0.045 ms/image\n"
      ]
     }
    ],
