--- a/04_vanilla_qat.ipynb
+++ b/04_vanilla_qat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "809bc54d",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "9a80487e",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "7e2e7531",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,10 @@
     "class STEQuant(torch.autograd.Function):\n",
     "    @staticmethod\n",
     "    def forward(ctx, x, scale, q_min=-128, q_max=127):\n",
-    "        s = scale.clamp(min=1e-8)\n",
+    "        if isinstance(scale, float):\n",
+    "            s = torch.tensor(scale, device=x.device).clamp(min=1e-8)\n",
+    "        else:\n",
+    "            s = scale.clamp(min=1e-8)\n",
     "        q = torch.clamp(torch.round(x/s), q_min, q_max)\n",
     "        return q * s # dequant return -> propagate noise to next layer\n",
     "    \n",
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "2e7665b6",
    "metadata": {},
    "outputs": [],
@@ -79,10 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "938e6e5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = ResNet18().to(device)\n",
     "model.load_state_dict(torch.load(\"resnet18_float32.pth\"))"
@@ -90,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "020225d2",
    "metadata": {},
    "outputs": [],
@@ -98,16 +112,26 @@
     "# Calibration (activation + weight scale)\n",
     "observers = {}\n",
     "hooks = []\n",
-    "def get_hook(name):\n",
+    "count = 0\n",
+    "\n",
+    "def get_safe_name(module):\n",
+    "    global count\n",
+    "    name = f\"{module.__class__.__name__}_{count}\"\n",
+    "    count += 1\n",
+    "    return name\n",
+    "\n",
+    "def get_hook(safe_name):\n",
     "    def hook(m, i, o):\n",
     "        if name not in observers:\n",
-    "            observers[name] = MinMaxObserver()\n",
-    "        observers[name](o.detach().cpu())\n",
+    "            observers[safe_name] = MinMaxObserver()\n",
+    "        observers[safe_name](o.detach().cpu())\n",
     "    return hook\n",
     "\n",
-    "for name, m in model.named_modules():\n",
+    "count = 0\n",
+    "for m in model.modules():\n",
     "    if isinstance(m, (nn.Conv2d, nn.Linear, nn.ReLU)):\n",
-    "        hooks.append(m.register_forward_hook(get_hook(name)))\n",
+    "        safe_name = get_safe_name(m)\n",
+    "        hooks.append(m.register_forward_hook(get_hook(safe_name)))\n",
     "\n",
     "# Calibration (2048 images)\n",
     "model.eval()\n",
@@ -122,8 +146,124 @@
     "act_scales = {name: obs.get_scale() for name, obs in observers.items()}\n",
     "\n",
     "weight_scales = {}\n",
-    "for name, p in model.named_parameters():"
+    "for name, p in model.named_parameters():\n",
+    "    if 'weight' in name and p.dim() > 1:\n",
+    "        obs = MinMaxObserver()\n",
+    "        obs(p.data.cpu())\n",
+    "        weight_scales[name] = obs.get_scale()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "37975eff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vanilla QAT model (manual forward + Insert FakeQuant)\n",
+    "class VanillaQATModel(nn.Module):\n",
+    "    def __init__(self, base_model, act_scales):\n",
+    "        super().__init__()\n",
+    "        self.base = base_model \n",
+    "        self.fq_dict = nn.ModuleDict({k: VanillaFakeQuant(v) for k, v in act_scales.items()})\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.base.conv1(x)\n",
+    "        x = self.base.bn1(x)\n",
+    "        x = self.base.relu(x)\n",
+    "        if 'conv1' in self.fq_dict: x = self.fq_dict['conv1'](x)\n",
+    "\n",
+    "        x = self.base.layer1(x)\n",
+    "        if 'layer1' in self.fq_dict: x = self.fq_dict['layer1'](x)\n",
+    "        x = self.base.layer2(x)\n",
+    "        if 'layer2' in self.fq_dict: x = self.fq_dict['layer2'](x)\n",
+    "        x = self.base.layer3(x)\n",
+    "        if 'layer3' in self.fq_dict: x = self.fq_dict['layer3'](x)\n",
+    "        x = self.base.layer4(x)\n",
+    "        if 'layer4' in self.fq_dict: x = self.fq_dict['layer4'](x)\n",
+    "\n",
+    "        x = self.base.avgpool(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.base.fc(x)\n",
+    "        return x\n",
+    "    \n",
+    "qat_model = VanillaQATModel(model, act_scales).to(device)\n",
+    "\n",
+    "# Weight fixed quant (DO STE every step)\n",
+    "def apply_fixed_weight_quant(model, scales):\n",
+    "    for name, p in model.named_parameters():\n",
+    "        if 'weight' in name and p.dim() > 1:\n",
+    "            # remove 'base.' prefix\n",
+    "            original_name = name.replace('base.', '')\n",
+    "            s = scales[original_name]\n",
+    "            p.data = STEQuant.apply(p.data, s)\n",
+    "\n",
+    "apply_fixed_weight_quant(qat_model, weight_scales)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "bfab5b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20 Acc: 81.79%\n",
+      "Epoch 2/20 Acc: 99.20%\n",
+      "Epoch 3/20 Acc: 99.39%\n",
+      "Epoch 4/20 Acc: 99.23%\n",
+      "Epoch 5/20 Acc: 99.24%\n",
+      "Epoch 6/20 Acc: 99.31%\n",
+      "Epoch 7/20 Acc: 99.13%\n",
+      "Epoch 8/20 Acc: 99.33%\n",
+      "Epoch 9/20 Acc: 99.24%\n",
+      "Epoch 10/20 Acc: 99.37%\n",
+      "Epoch 11/20 Acc: 99.39%\n",
+      "Epoch 12/20 Acc: 99.37%\n",
+      "Epoch 13/20 Acc: 99.18%\n",
+      "Epoch 14/20 Acc: 99.35%\n",
+      "Epoch 15/20 Acc: 99.37%\n",
+      "Epoch 16/20 Acc: 99.35%\n",
+      "Epoch 17/20 Acc: 99.36%\n",
+      "Epoch 18/20 Acc: 99.41%\n",
+      "Epoch 19/20 Acc: 99.45%\n",
+      "Epoch 20/20 Acc: 99.31%\n",
+      "Final Vanilla QAT Acc: 99.31%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fine-tuning\n",
+    "optimizer = optim.Adam(qat_model.parameters(), lr=1e-4)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "epochs = 20\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    qat_model.train()\n",
+    "    for x, y in train_loader:\n",
+    "        x, y = x.to(device), y.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss = criterion(qat_model(x), y)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    apply_fixed_weight_quant(qat_model, weight_scales)\n",
+    "\n",
+    "    print(f\"Epoch {epoch+1}/{epochs} Acc: {evaluate(qat_model):.2f}%\")\n",
+    "\n",
+    "print(f\"Final Vanilla QAT Acc: {evaluate(qat_model):.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "680d87b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
