--- a/text.ipynb
+++ b/text.ipynb
@@ -63,12 +63,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4845a47e",
+   "metadata": {},
+   "source": [
+    "## General Quantization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "efb71bf6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "def linear_quantize(tensor, scale, zero_point, dtype=torch.int8):\n",
+    "    # symmetric (zero_point=0) 기준, clamp 후 round\n",
+    "    scaled = tensor /scale\n",
+    "    rounded = torch.round(scaled)\n",
+    "    clamped = torch.clamp(rounded, -128, 127) \n",
+    "    return clamped.to(dtype)\n",
+    "\n",
+    "def linear_dequantize(q_tensor, scale, zero_point=0):\n",
+    "    dequant = (q_tensor.float() - zero_point) * scale\n",
+    "    return dequant"
+   ]
   }
  ],
  "metadata": {
