--- a/04_vanilla_qat.ipynb
+++ b/04_vanilla_qat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 162,
    "id": "809bc54d",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 163,
    "id": "9a80487e",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 164,
    "id": "7e2e7531",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 165,
    "id": "2e7665b6",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 166,
    "id": "938e6e5d",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,34 +104,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 167,
    "id": "020225d2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
+    "def sanitize_name(name):\n",
+    "    return re.sub(r'\\.', '_', name)\n",
+    "\n",
     "# Calibration (activation + weight scale)\n",
     "observers = {}\n",
     "hooks = []\n",
-    "count = 0\n",
-    "\n",
-    "def get_safe_name(module):\n",
-    "    global count\n",
-    "    name = f\"{module.__class__.__name__}_{count}\"\n",
-    "    count += 1\n",
-    "    return name\n",
     "\n",
     "def get_hook(safe_name):\n",
     "    def hook(m, i, o):\n",
-    "        if name not in observers:\n",
+    "        if safe_name not in observers:\n",
     "            observers[safe_name] = MinMaxObserver()\n",
     "        observers[safe_name](o.detach().cpu())\n",
     "    return hook\n",
     "\n",
-    "count = 0\n",
-    "for m in model.modules():\n",
-    "    if isinstance(m, (nn.Conv2d, nn.Linear, nn.ReLU)):\n",
-    "        safe_name = get_safe_name(m)\n",
-    "        hooks.append(m.register_forward_hook(get_hook(safe_name)))\n",
+    "for name, module in model.named_modules():\n",
+    "    if isinstance(module, (nn.Conv2d, nn.Linear, nn.ReLU)):\n",
+    "        safe_name = sanitize_name(name)\n",
+    "        hooks.append(module.register_forward_hook(get_hook(safe_name)))\n",
     "\n",
     "# Calibration (2048 images)\n",
     "model.eval()\n",
@@ -155,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 168,
    "id": "37975eff",
    "metadata": {},
    "outputs": [],
@@ -166,7 +163,6 @@
     "        super().__init__()\n",
     "        self.base = base_model \n",
     "        self.fq_dict = nn.ModuleDict({k: VanillaFakeQuant(v) for k, v in act_scales.items()})\n",
-    "    \n",
     "    def forward(self, x):\n",
     "        x = self.base.conv1(x)\n",
     "        x = self.base.bn1(x)\n",
@@ -174,13 +170,13 @@
     "        if 'conv1' in self.fq_dict: x = self.fq_dict['conv1'](x)\n",
     "\n",
     "        x = self.base.layer1(x)\n",
-    "        if 'layer1' in self.fq_dict: x = self.fq_dict['layer1'](x)\n",
+    "        if 'layer1_1_conv2' in self.fq_dict: x = self.fq_dict['layer1_1_conv2'](x)\n",
     "        x = self.base.layer2(x)\n",
-    "        if 'layer2' in self.fq_dict: x = self.fq_dict['layer2'](x)\n",
+    "        if 'layer2_1_conv2' in self.fq_dict: x = self.fq_dict['layer2_1_conv2'](x)\n",
     "        x = self.base.layer3(x)\n",
-    "        if 'layer3' in self.fq_dict: x = self.fq_dict['layer3'](x)\n",
+    "        if 'layer3_1_conv2' in self.fq_dict: x = self.fq_dict['layer3_1_conv2'](x)\n",
     "        x = self.base.layer4(x)\n",
-    "        if 'layer4' in self.fq_dict: x = self.fq_dict['layer4'](x)\n",
+    "        if 'layer4_1_conv2' in self.fq_dict: x = self.fq_dict['layer4_1_conv2'](x)\n",
     "\n",
     "        x = self.base.avgpool(x)\n",
     "        x = torch.flatten(x, 1)\n",
@@ -204,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 170,
    "id": "bfab5b05",
    "metadata": {},
    "outputs": [
@@ -212,27 +208,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 Acc: 81.79%\n",
-      "Epoch 2/20 Acc: 99.20%\n",
-      "Epoch 3/20 Acc: 99.39%\n",
-      "Epoch 4/20 Acc: 99.23%\n",
-      "Epoch 5/20 Acc: 99.24%\n",
-      "Epoch 6/20 Acc: 99.31%\n",
-      "Epoch 7/20 Acc: 99.13%\n",
-      "Epoch 8/20 Acc: 99.33%\n",
+      "Epoch 1/20 Acc: 98.90%\n",
+      "Epoch 2/20 Acc: 99.13%\n",
+      "Epoch 3/20 Acc: 97.90%\n",
+      "Epoch 4/20 Acc: 99.07%\n",
+      "Epoch 5/20 Acc: 99.15%\n",
+      "Epoch 6/20 Acc: 99.16%\n",
+      "Epoch 7/20 Acc: 99.29%\n",
+      "Epoch 8/20 Acc: 99.25%\n",
       "Epoch 9/20 Acc: 99.24%\n",
-      "Epoch 10/20 Acc: 99.37%\n",
-      "Epoch 11/20 Acc: 99.39%\n",
-      "Epoch 12/20 Acc: 99.37%\n",
-      "Epoch 13/20 Acc: 99.18%\n",
-      "Epoch 14/20 Acc: 99.35%\n",
-      "Epoch 15/20 Acc: 99.37%\n",
-      "Epoch 16/20 Acc: 99.35%\n",
-      "Epoch 17/20 Acc: 99.36%\n",
-      "Epoch 18/20 Acc: 99.41%\n",
-      "Epoch 19/20 Acc: 99.45%\n",
-      "Epoch 20/20 Acc: 99.31%\n",
-      "Final Vanilla QAT Acc: 99.31%\n"
+      "Epoch 10/20 Acc: 99.13%\n",
+      "Epoch 11/20 Acc: 99.12%\n",
+      "Epoch 12/20 Acc: 99.27%\n",
+      "Epoch 13/20 Acc: 99.03%\n",
+      "Epoch 14/20 Acc: 99.07%\n",
+      "Epoch 15/20 Acc: 99.23%\n",
+      "Epoch 16/20 Acc: 99.07%\n",
+      "Epoch 17/20 Acc: 99.21%\n",
+      "Epoch 18/20 Acc: 99.21%\n",
+      "Epoch 19/20 Acc: 99.35%\n",
+      "Epoch 20/20 Acc: 99.25%\n",
+      "Final Vanilla QAT Acc: 99.25%\n"
      ]
     }
    ],
@@ -260,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "680d87b7",
+   "id": "b7632ae9",
    "metadata": {},
    "outputs": [],
    "source": []
