--- a/01_float32_baseline.ipynb
+++ b/01_float32_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "fa17c3d0",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "85a237e3",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "ef1d459e",
    "metadata": {},
    "outputs": [
@@ -39,41 +39,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/30 - Test Acc: 8.92%\n",
-      "Epoch 2/30 - Test Acc: 98.25%\n",
-      "Epoch 3/30 - Test Acc: 98.74%\n",
-      "Epoch 4/30 - Test Acc: 99.09%\n",
-      "Epoch 5/30 - Test Acc: 98.91%\n",
-      "Epoch 6/30 - Test Acc: 99.03%\n",
-      "Epoch 7/30 - Test Acc: 98.80%\n",
-      "Epoch 8/30 - Test Acc: 99.12%\n",
-      "Epoch 9/30 - Test Acc: 98.98%\n",
-      "Epoch 10/30 - Test Acc: 99.03%\n",
-      "Epoch 11/30 - Test Acc: 98.52%\n",
-      "Epoch 12/30 - Test Acc: 99.13%\n",
-      "Epoch 13/30 - Test Acc: 99.21%\n",
-      "Epoch 14/30 - Test Acc: 99.10%\n",
-      "Epoch 15/30 - Test Acc: 99.11%\n",
-      "Epoch 16/30 - Test Acc: 99.12%\n",
-      "Epoch 17/30 - Test Acc: 99.09%\n",
-      "Epoch 18/30 - Test Acc: 99.01%\n",
-      "Epoch 19/30 - Test Acc: 99.18%\n",
-      "Epoch 20/30 - Test Acc: 99.19%\n",
-      "Epoch 21/30 - Test Acc: 99.17%\n",
-      "Epoch 22/30 - Test Acc: 99.17%\n",
-      "Epoch 23/30 - Test Acc: 99.22%\n",
-      "Epoch 24/30 - Test Acc: 98.81%\n",
-      "Epoch 25/30 - Test Acc: 99.23%\n",
-      "Epoch 26/30 - Test Acc: 99.15%\n",
-      "Epoch 27/30 - Test Acc: 99.20%\n",
-      "Epoch 28/30 - Test Acc: 99.31%\n",
-      "Epoch 29/30 - Test Acc: 99.27%\n",
-      "Epoch 30/30 - Test Acc: 99.36%\n"
+      "Epoch 1/30 - Test Acc: 7.67%\n",
+      "Epoch 2/30 - Test Acc: 97.89%\n",
+      "Epoch 3/30 - Test Acc: 98.72%\n",
+      "Epoch 4/30 - Test Acc: 98.94%\n",
+      "Epoch 5/30 - Test Acc: 99.10%\n",
+      "Epoch 6/30 - Test Acc: 99.26%\n",
+      "Epoch 7/30 - Test Acc: 98.67%\n",
+      "Epoch 8/30 - Test Acc: 99.19%\n",
+      "Epoch 9/30 - Test Acc: 98.73%\n",
+      "Epoch 10/30 - Test Acc: 99.07%\n",
+      "Epoch 11/30 - Test Acc: 98.84%\n",
+      "Epoch 12/30 - Test Acc: 99.10%\n",
+      "Epoch 13/30 - Test Acc: 99.26%\n",
+      "Epoch 14/30 - Test Acc: 99.24%\n",
+      "Epoch 15/30 - Test Acc: 99.04%\n",
+      "Epoch 16/30 - Test Acc: 99.32%\n",
+      "Epoch 17/30 - Test Acc: 99.12%\n",
+      "Epoch 18/30 - Test Acc: 99.34%\n",
+      "Epoch 19/30 - Test Acc: 99.17%\n",
+      "Epoch 20/30 - Test Acc: 99.25%\n",
+      "Epoch 21/30 - Test Acc: 99.34%\n",
+      "Epoch 22/30 - Test Acc: 99.28%\n",
+      "Epoch 23/30 - Test Acc: 99.24%\n",
+      "Epoch 24/30 - Test Acc: 99.35%\n",
+      "Epoch 25/30 - Test Acc: 99.09%\n",
+      "Epoch 26/30 - Test Acc: 99.33%\n",
+      "Epoch 27/30 - Test Acc: 99.31%\n",
+      "Epoch 28/30 - Test Acc: 99.40%\n",
+      "Epoch 29/30 - Test Acc: 99.08%\n",
+      "Epoch 30/30 - Test Acc: 99.30%\n"
      ]
     }
    ],
    "source": [
-    "epochs = 30\n",
+    "epochs = 20\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
     "    acc = evaluate(model)\n",
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quant",
+   "display_name": "quant2",
    "language": "python",
    "name": "python3"
   },
