--- a/04_lsq_qat.ipynb
+++ b/04_lsq_qat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "f3babd8b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "14f09914",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "a24320ec",
    "metadata": {},
    "outputs": [],
@@ -58,12 +58,20 @@
     "        return grad_output, None\n",
     "    \n",
     "class LSQFakeQuant(nn.Module):\n",
-    "    def __init__(self, init_scale):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.scale = nn.Parameter(torch.tensor(init_scale)) # learnable\n",
+    "        self.scale = nn.Parameter(torch.tensor(0.1)) # learnable, dummy value\n",
+    "        self.register_buffer('initialized', torch.tensor(False))\n",
     "    \n",
     "    def forward(self, x):\n",
     "        if self.training:\n",
+    "            if not self.initialized:\n",
+    "                Qp = 127.0\n",
+    "                mean_abs = x.detach().abs().mean()\n",
+    "                init_scale = 2*mean_abs/ (Qp ** 0.5)\n",
+    "                self.scale.data.copy_(init_scale)\n",
+    "                self.initialized.fill_(True)\n",
+    "\n",
     "            return STEQuant.apply(x, self.scale)\n",
     "        return x\n",
     "    \n",
@@ -74,11 +82,11 @@
     "        self.base = base_model\n",
     "\n",
     "        # put LSQFakeQuant on main activation\n",
-    "        self.fq_conv1 = LSQFakeQuant(init_scale=0.07)\n",
-    "        self.fq_layer1 = LSQFakeQuant(init_scale=0.07)\n",
-    "        self.fq_layer2 = LSQFakeQuant(init_scale=0.07)\n",
-    "        self.fq_layer3 = LSQFakeQuant(init_scale=0.07)\n",
-    "        self.fq_layer4 = LSQFakeQuant(init_scale=0.07)\n",
+    "        self.fq_conv1 = LSQFakeQuant()\n",
+    "        self.fq_layer1 = LSQFakeQuant()\n",
+    "        self.fq_layer2 = LSQFakeQuant()\n",
+    "        self.fq_layer3 = LSQFakeQuant()\n",
+    "        self.fq_layer4 = LSQFakeQuant()\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.base.conv1(x)\n",
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "id": "b3a20aaf",
    "metadata": {},
    "outputs": [],
@@ -113,16 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "id": "55007e71",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Weight learnable scale\n",
     "weight_scale_params = {}\n",
+    "Qp= 127.0\n",
     "for name, p in qat_model.named_parameters():\n",
     "    if 'weight' in name and p.dim() > 1:\n",
-    "        weight_scale_params[name.replace('base.', '')] = nn.Parameter(torch.tensor(0.07))\n",
+    "        original_name = name.replace('base.', '')\n",
+    "        mean_abs = p.detach().abs().abs().mean().item()\n",
+    "        init_scale = 2 * mean_abs / (Qp ** 0.5)\n",
+    "        weight_scale_params[original_name] = nn.Parameter(torch.tensor(init_scale))\n",
     "\n",
     "# LSQ weight quantization function\n",
     "def apply_lsq_weight_quant(model, scale_params):\n",
@@ -137,44 +149,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "0a9ac62f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 Acc: 33.99%\n",
-      "Epoch 2 Acc: 59.91%\n",
-      "Epoch 3 Acc: 76.78%\n",
-      "Epoch 4 Acc: 84.64%\n",
-      "Epoch 5 Acc: 91.44%\n",
-      "Epoch 6 Acc: 94.14%\n",
-      "Epoch 7 Acc: 95.30%\n",
-      "Epoch 8 Acc: 95.88%\n",
-      "Epoch 9 Acc: 96.32%\n",
-      "Epoch 10 Acc: 96.55%\n",
-      "Epoch 11 Acc: 96.91%\n",
-      "Epoch 12 Acc: 97.16%\n",
-      "Epoch 13 Acc: 97.36%\n",
-      "Epoch 14 Acc: 97.56%\n",
-      "Epoch 15 Acc: 97.79%\n",
-      "Epoch 16 Acc: 97.91%\n",
-      "Epoch 17 Acc: 98.00%\n",
-      "Epoch 18 Acc: 98.04%\n",
-      "Epoch 19 Acc: 98.15%\n",
-      "Epoch 20 Acc: 98.15%\n",
-      "Epoch 21 Acc: 98.12%\n",
-      "Epoch 22 Acc: 98.08%\n",
-      "Epoch 23 Acc: 98.19%\n",
-      "Epoch 24 Acc: 98.39%\n",
-      "Epoch 25 Acc: 98.48%\n",
-      "Epoch 26 Acc: 98.35%\n",
-      "Epoch 27 Acc: 98.53%\n",
-      "Epoch 28 Acc: 98.57%\n",
-      "Epoch 29 Acc: 98.61%\n",
-      "Epoch 30 Acc: 98.69%\n"
+     "ename": "AttributeError",
+     "evalue": "'Tensor' object has no attribute 'fill'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m x, y \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mto(device), y\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m      9\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 10\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(\u001b[43mqat_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m, y)\n\u001b[1;32m     11\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     12\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1775\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1773\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1774\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1775\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1786\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1781\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1782\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1783\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1784\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1785\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1786\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1788\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1789\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "Cell \u001b[0;32mIn[16], line 47\u001b[0m, in \u001b[0;36mLSQQATModel.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     45\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase\u001b[38;5;241m.\u001b[39mbn1(x)\n\u001b[1;32m     46\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase\u001b[38;5;241m.\u001b[39mrelu(x)\n\u001b[0;32m---> 47\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfq_conv1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     49\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase\u001b[38;5;241m.\u001b[39mlayer1(x)\n\u001b[1;32m     50\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfq_layer1(x)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1775\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1773\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1774\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1775\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1786\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1781\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1782\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1783\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1784\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1785\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1786\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1788\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1789\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "Cell \u001b[0;32mIn[16], line 25\u001b[0m, in \u001b[0;36mLSQFakeQuant.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     23\u001b[0m         init_scale \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mmean_abs\u001b[38;5;241m/\u001b[39m (Qp \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.5\u001b[39m)\n\u001b[1;32m     24\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscale\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mcopy_(init_scale)\n\u001b[0;32m---> 25\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minitialized\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfill\u001b[49m(\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m STEQuant\u001b[38;5;241m.\u001b[39mapply(x, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscale)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m x\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'fill'"
      ]
     }
    ],
